FIX: Use Mobile Text Align

--- a/Use/use.css
+++ b/Use/use.css
@@ -275,6 +275,7 @@ p{
 		margin:0 !important;
 		border-top-left-radius:0 !important;
 		border-top-right-radius:0 !important;
+		text-align:left !important;
 	}
 	.PicOverlay{
 		display:none !important;
